Added piAtom directive

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.5/angular.min.js"></script>
         <script src="app.js"></script>
+        <script src="piAtom.js"></script>
     </head>
     <body>
         <div ng-controller="mainController as vm">
-            Test: {{vm.text}}
+            <pi-atom ng-repeat="atom in vm.piArray track by $index" atom="atom" tick="vm.tick"></pi-atom>
         </div>
     </body>
 </html>
